# compose-services

./: .env-example  .gitignore  Makefile  README.md  bw.sh  groups.py  nodes.py  pyproject.toml  requirements.txt  ubuntu_20_04_setup.sh
bundles/apt/: items.py
bundles/journald/: items.py
bundles/journald/files/: journald.conf
bundles/nextcloud/: items.py
bundles/nextcloud/files/: docker-compose.yml  traefik.yml
bundles/purge_snap/: items.py
bundles/users/: items.py
nextcloud/: Makefile  docker-compose.yml  example-env
scripts/: secrets_cfg.py  setup_user.sh
