[tool.poetry]
name = "compose-services"
version = "0.1.0"
description = ""
authors = ["JensDiemer <compose-services@jensdiemer.de>"]

[tool.poetry.dependencies]
python = "^3.7"
bundlewrap = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
